# search

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  config.py  db.py  embeddings.py  hyde.py  ingest.py  main.py  opik.py  search.py
db/: init-dagster.sql  init.sql
evaluator/: Dockerfile  README.md  dagster.yaml  evaluator-code-start.sh  evaluator-daemon-start.sh  evaluator-webserver-start.sh  pyproject.toml  workspace.yaml
evaluator/config/: metrics.yaml
evaluator/evaluator/: app.py  client.py  config.py  dataset.py  evaluator.py  judges.py  metrics.py  opik_client.py  pdfs.py  ragas.py  types.py
evaluator/evaluator/evaluate/: __init__.py  job.py
evaluator/evaluator/index/: __init__.py  job.py
frontend/: streamlit_app.py
