[project]
name = "search-agent"
version = "0.1.0"
description = "A teaching repo: building a search agent with Pydantic AI, pgvector, and Postgres FTS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai-slim[anthropic,openai]>=0.0.49",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "openai>=1.54",
    "pypdf>=5.1",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "streamlit>=1.39",
    "httpx>=0.27",
    "opik>=2.0",
    "uuid6>=2024.7",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's File()/Query() in argument defaults is the documented, idiomatic pattern.
"app/main.py" = ["B008"]